test/compilable/test17382.d
module test17382;

void main()
{
}

pragma(msg,main());
