test/fail_compilation/fail296.d
// 3117

void main(){ *1; }

